--- a/day01/CProject/CProject/CProject.vcxproj.filters
+++ b/day01/CProject/CProject/CProject.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="string01.cpp">
+    <ClCompile Include="test09_pmmd.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
