--- a/day07/Project7/Project7/Project7.vcxproj.filters
+++ b/day07/Project7/Project7/Project7.vcxproj.filters
@@ -36,5 +36,23 @@
     <ClCompile Include="test07_EmplotMana1.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="test08_Inheritance.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="test09_DerivCreOrder.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="test10_DestModel.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="test11_ISAInheritance.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="test12_HASInheritance.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="test13_Last.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
