--- a/day08/Project8/Project8/Project8.vcxproj.filters
+++ b/day08/Project8/Project8/Project8.vcxproj.filters
@@ -27,5 +27,23 @@
     <ClCompile Include="test06_EmplMana3.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="test07_TV.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="test08_Virtual.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="test09_VirDestr.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="test10_RefAttri.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="test11_RealObjUnder1.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="test12_RealObjUnder2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
