--- a/day13/Project13/Project13/Project13.vcxproj.filters
+++ b/day13/Project13/Project13/Project13.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="test03_vector2.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="test04.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
